--- a/solo_leveling.css
+++ b/solo_leveling.css
@@ -101,3 +101,24 @@ footer { width:100%; background: rgba(0,0,0,0.8); text-align:center; padding:15p
   main { margin-left: 40px; padding-top: 80px; }
   iframe { width:100%; height:200px; }
 }
+
+b {
+  color:maroon;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  text-decoration: underline;
+
+
+
+}
+
+span {
+
+  color: darkmagenta;
+  font-weight: bold;
+  font-family:'Times New Roman', Times, serif;
+  font-size: 1.2rem;
+
+
+
+
+}
